# kamino

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml
docs/: climate.md  ocean_chemistry.md  ocean_circulation.md  overview.md  weathering.md
notebooks/: box4.ipynb  evolution_plots.ipynb  plots.ipynb  poster.ipynb  speedy_climate_test.ipynb  steady_state_plots.ipynb  stommel_test.ipynb  test.ipynb  weathering_plots.ipynb
src/kamino/: constants.py  planet.py  utils.py
src/kamino/ocean_chemistry/: aqueous_geochemistry.py  build_phreeqc.py  co2.py  fast_chemistry.py  precipitation.py  precipitation_interpolator.py
src/kamino/ocean_circulation/: analytic.py
src/kamino/seafloor_weathering/: weathering.py
src/kamino/speedy_climate/: analytic.py  clima_interpolator.py  climate.py  emulator.py  generator.py  interpolator.py  simple.py  simple_v2.py
src/kamino/speedy_climate/data/climate_runs/: clima_data_grid_rapid.csv  clima_data_grid_tidal.csv  dataset_2d.csv  dataset_2d_v2.csv  dataset_2d_v3.csv  dataset_2d_v4.csv  dataset_2d_v5.csv  dataset_4d.csv  dataset_4d_rapid.csv  dataset_4d_rapid_cloudy.csv  dataset_4d_tidal.csv  dataset_4d_v2.csv  helios_1000_runs_earth_rapid_rotator.csv  helios_1000_runs_earth_tidally_locked.csv  (+4 more)
tests/: test_clima_interpolator.py  test_fast_chemistry.py  test_helios.py  test_interpolator.py  test_ocean_chemistry.py  test_planet.py  test_precipitation_interpolator.py  test_seafloor_weathering.py  test_speedy_climate.py  test_speedy_climate_generator.py  test_speedy_climate_simple.py
(+3 files in other folders)
